@@ -1,12 +1,0 @@
-rebmix/libs/i386/rebmix.dll
-rebmix/libs/x64/rebmix.dll
-src-i386/rebmix.dll
-src-i386/rebmix.o
-src-i386/rebmixf.o
-src-i386/rngmixf.o
-src-i386/Rrebmix.o
-src-x64/rebmix.dll
-src-x64/rebmix.o
-src-x64/rebmixf.o
-src-x64/rngmixf.o
-src-x64/Rrebmix.o
