@@ -1,8 +1,8 @@
 Package: rebmix
-Version: 2.5.0
+Version: 2.5.1
 Title: The Rebmix Package
 Author: Marko Nagode
 Maintainer: Marko Nagode <marko.nagode@fs.uni-lj.si>
 Description: R functions for random univariate and multivariate finite mixture generation, number of components, component weights and component parameters estimation, printing and plotting of finite mixtures, bootstrapping and class membership prediction. Variables can be either continuous or discrete, may follow normal, lognormal, Weibull, gamma, binomial, Poisson or Dirac parametric families and should be independent within components.
 License: GPL (>= 2)
-Suggests: mixtools, mclust
+Suggests: flexmix, mclust, mixtools
